# montura

./: .clang-format  .clinerules  .continuerc.json  .gitignore  CLAUDE.md  CMakeLists.txt  CONTINUE.md  README.md  sdkconfig
.github/: copilot-instructions.md
api/: mount.http
main/: CMakeLists.txt  main.c
main/alpaca_bridge/: alpaca_bridge.h  alpaca_bridge_altitude.c  alpaca_bridge_destination_pier.c  alpaca_bridge_internal.h  alpaca_bridge_mount_state.c  alpaca_bridge_pier_side.c  alpaca_bridge_set_park.c  alpaca_bridge_settle_time.c  alpaca_bridge_sidereal_time.c  alpaca_bridge_site.c  alpaca_bridge_slew_sync.c  alpaca_bridge_slew_to_coordinates.c  alpaca_bridge_state.c  alpaca_bridge_target.c  alpaca_bridge_tracking_rate.c  alpaca_bridge_utc_date.c
main/buttons/: buttons.h  buttons_hw.c  buttons_poll.c  buttons_stop_handler.c
main/led/: led.h  led_breathe_cb.c  led_button_blink.c  led_external_off.c  led_external_on.c  led_init.c  led_internal.h  led_off.c  led_on.c  led_set_state.c  led_slew_sync.c  led_update.c
main/motors/: motors.h  motors_button_stop.c  motors_command_queue.c  motors_current_state.c  motors_disable.c  motors_enable.c  motors_get_slewing_speed.c  motors_get_tracking_speed.c  motors_home.c  motors_hw.c  motors_init.c  motors_internal.h  motors_motion_task.c  motors_move_axis_speed.c  motors_move_axis_velocity.c  motors_park.c  motors_set_axis_velocity.c  motors_slew_axis.c  motors_slew_to_angle.c  motors_start_tracking.c  motors_stop.c  motors_sync_position.c  motors_tools.c
main/motors_motion/: motors_motion.h  motors_motion_disable.c  motors_motion_enable.c  motors_motion_hw.c  motors_motion_internal.h  motors_motion_move_axis.c  motors_motion_park.c  motors_motion_queue.c  motors_motion_slew.c  motors_motion_slew_relative.c  motors_motion_stop.c  motors_motion_sync.c  motors_motion_task.c  motors_motion_track.c
main/mount/: mount.c  mount.h  mount_alpaca_bridge.c  mount_coordinate_tools.c  mount_coordinates.c  mount_get_lst.c  mount_get_visible_status_data.c  mount_goto.c  mount_home.c  mount_internal.h  mount_move_axis.c  mount_park.c  mount_set_move_axis_speed.c  mount_set_move_axis_velocity.c  mount_set_system_time.c  mount_set_tracking.c  mount_settings.c  mount_settings_load.c  mount_settings_save.c  mount_settings_storage.c  mount_settings_update.c  mount_slew_to_coordinates.c  mount_stop.c  mount_sync.c  mount_sync_position.c  mount_time.c  mount_tools.c  mount_tracking.c  mount_unpark.c  mount_visible_status.c
main/network/: network.c  network.h  network_configure_home_wifi.c  network_internal.h  network_ip.c  network_is_setup_ap_started.c  network_sntp.c
main/rest/: rest.h  rest_api_server.c  rest_goto_handler.c  rest_home_handler.c  rest_html_handler.c  rest_move_axis_handler.c  rest_move_axis_speed_handler.c  rest_move_axis_velocity_handler.c  rest_park_handler.c  rest_screen_handler.c  rest_server.c  rest_server_start.c  rest_settings_handler.c  rest_slew_to_coordinates_handler.c  rest_status_handler.c  rest_stop_handler.c  rest_sync_handler.c  rest_tools.c  rest_tracking_handler.c  rest_unpark_handler.c  rest_wifi_handler.c
main/rest_alpaca/: rest_alpaca.h  rest_alpaca_abortslew_handler.c  rest_alpaca_alignmentmode_handler.c  rest_alpaca_altitude_handler.c  rest_alpaca_aperturearea_handler.c  rest_alpaca_aperturediameter_handler.c  rest_alpaca_athome_handler.c  rest_alpaca_atpark_handler.c  rest_alpaca_axisrates_handler.c  rest_alpaca_azimuth_handler.c  rest_alpaca_canfindhome_handler.c  rest_alpaca_canmoveaxis_handler.c  rest_alpaca_canpark_handler.c  rest_alpaca_canpulseguide_handler.c  rest_alpaca_cansetdeclinationrate_handler.c  rest_alpaca_cansetguiderates_handler.c  rest_alpaca_cansetpark_handler.c  rest_alpaca_cansetpierside_handler.c  rest_alpaca_cansetrightascensionrate_handler.c  rest_alpaca_cansettracking_handler.c  rest_alpaca_canslew_handler.c  rest_alpaca_canslewaltaz_handler.c  rest_alpaca_canslewaltazasync_handler.c  rest_alpaca_canslewasync_handler.c  rest_alpaca_cansync_handler.c  rest_alpaca_cansyncaltaz_handler.c  rest_alpaca_canunpark_handler.c  rest_alpaca_connected_handler.c  rest_alpaca_connected_put_handler.c  rest_alpaca_declination_handler.c  rest_alpaca_declinationrate_handler.c  rest_alpaca_declinationrate_put_handler.c  rest_alpaca_description_handler.c  rest_alpaca_destinationsideofpier_handler.c  rest_alpaca_doesrefraction_handler.c  rest_alpaca_driverinfo_handler.c  rest_alpaca_driverversion_handler.c  rest_alpaca_equatorialsystem_handler.c  rest_alpaca_findhome_handler.c  rest_alpaca_focallength_handler.c  (+51 more)
main/runtime/: rest_api_server.c  runtime.h  runtime_config.c  runtime_http.c  runtime_loop.c  runtime_setup.c
main/screen/: convert_icons.py  gen_icons.py  screen.c  screen.h  screen_draw_bitmap.c  screen_font_5x10.c  screen_font_8x12.c  screen_ssd1306.c
main/tmc/: tmc.h  tmc_get_active_microsteps.c  tmc_init.c  tmc_internal.h
main/tools/: http_response.c  http_utils.c  json_utils.c  number_utils.c  rest_send_result.c  rest_tools.c  rest_tools.h  rest_utils.c  string_utils.c  tools.h
main/udp_alpaca/: udp_alpaca.c  udp_alpaca.h
main/utils/: http_utils.c  json_utils.c  number_utils.c  rest_utils.c  string_utils.c
www/: build.js  package-lock.json  package.json
www/src/: app.js  index.html  style.css
