idf_component_register(
        SRCS
        "main.c"

        "buttons/buttons_hw.c"
        "buttons/buttons_poll.c"

        "led/led_init.c"
        "led/led_on.c"
        "led/led_off.c"

        "motors/motors_button_stop.c"
        "motors/motors_current_state.c"
        "motors/motors_disable.c"
        "motors/motors_enable.c"
        "motors/motors_get_slewing_speed.c"
        "motors/motors_get_tracking_speed.c"
        "motors/motors_home.c"
        "motors/motors_init.c"
        "motors/motors_move_axis_velocity.c"
        "motors/motors_park.c"
        "motors/motors_set_axis_velocity.c"
        "motors/motors_slew_axis.c"
        "motors/motors_slew_to_angle.c"
        "motors/motors_start_tracking.c"
        "motors/motors_stop.c"
        "motors/motors_sync_position.c"
        "motors/motors_tools.c"

        "motors_motion/motors_motion_disable.c"
        "motors_motion/motors_motion_enable.c"
        "motors_motion/motors_motion_hw.c"
        "motors_motion/motors_motion_move_axis.c"
        "motors_motion/motors_motion_park.c"
        "motors_motion/motors_motion_queue.c"
        "motors_motion/motors_motion_slew.c"
        "motors_motion/motors_motion_slew_relative.c"
        "motors_motion/motors_motion_stop.c"
        "motors_motion/motors_motion_sync.c"
        "motors_motion/motors_motion_task.c"
        "motors_motion/motors_motion_track.c"

        "mount/mount.c"
        "mount/mount_coordinate_tools.c"
        "mount/mount_goto.c"
        "mount/mount_home.c"
        "mount/mount_move_axis.c"
        "mount/mount_set_move_axis_velocity.c"
        "mount/mount_park.c"
        "mount/mount_settings_update.c"
        "mount/mount_settings_load.c"
        "mount/mount_settings_save.c"
        "mount/mount_stop.c"
        "mount/mount_sync.c"
        "mount/mount_set_system_time.c"
        "mount/mount_tools.c"
        "mount/mount_set_tracking.c"
        "mount/mount_unpark.c"
        "mount/mount_get_visible_status_data.c"

        "network/network.c"
        "network/network_configure_home_wifi.c"
        "network/network_ip.c"
        "network/network_is_setup_ap_started.c"
        "network/network_sntp.c"

        "rest/rest_api_server.c"
        "rest/rest_goto_handler.c"
        "rest/rest_home_handler.c"
        "rest/rest_move_axis_handler.c"
        "rest/rest_park_handler.c"
        "rest/rest_html_handler.c"
        "rest/rest_settings_handler.c"
        "rest/rest_status_handler.c"
        "rest/rest_stop_handler.c"
        "rest/rest_sync_handler.c"
        "rest/rest_tools.c"
        "rest/rest_tracking_handler.c"
        "rest/rest_unpark_handler.c"
        "rest/rest_wifi_handler.c"

        "rest_alpaca/rest_alpaca_abortslew_handler.c"
        "rest_alpaca/rest_alpaca_alignmentmode_handler.c"
        "rest_alpaca/rest_alpaca_altitude_handler.c"
        "rest_alpaca/rest_alpaca_aperturearea_handler.c"
        "rest_alpaca/rest_alpaca_aperturediameter_handler.c"
        "rest_alpaca/rest_alpaca_athome_handler.c"
        "rest_alpaca/rest_alpaca_atpark_handler.c"
        "rest_alpaca/rest_alpaca_axisrates_handler.c"
        "rest_alpaca/rest_alpaca_azimuth_handler.c"

        "alpaca_bridge/alpaca_bridge_altitude.c"
        "alpaca_bridge/alpaca_bridge_mount_state.c"
        "alpaca_bridge/alpaca_bridge_pier_side.c"
        "alpaca_bridge/alpaca_bridge_set_park.c"
        "alpaca_bridge/alpaca_bridge_settle_time.c"
        "alpaca_bridge/alpaca_bridge_sidereal_time.c"
        "alpaca_bridge/alpaca_bridge_site.c"
        "alpaca_bridge/alpaca_bridge_slew_sync.c"
        "alpaca_bridge/alpaca_bridge_state.c"
        "alpaca_bridge/alpaca_bridge_target.c"
        "alpaca_bridge/alpaca_bridge_tracking_rate.c"
        "alpaca_bridge/alpaca_bridge_utc_date.c"
        "rest_alpaca/rest_alpaca_canfindhome_handler.c"
        "rest_alpaca/rest_alpaca_canmoveaxis_handler.c"
        "rest_alpaca/rest_alpaca_canpark_handler.c"
        "rest_alpaca/rest_alpaca_canpulseguide_handler.c"
        "rest_alpaca/rest_alpaca_cansetdeclinationrate_handler.c"
        "rest_alpaca/rest_alpaca_cansetguiderates_handler.c"
        "rest_alpaca/rest_alpaca_cansetpark_handler.c"
        "rest_alpaca/rest_alpaca_cansetpierside_handler.c"
        "rest_alpaca/rest_alpaca_cansetrightascensionrate_handler.c"
        "rest_alpaca/rest_alpaca_cansettracking_handler.c"
        "rest_alpaca/rest_alpaca_canslew_handler.c"
        "rest_alpaca/rest_alpaca_canslewaltaz_handler.c"
        "rest_alpaca/rest_alpaca_canslewaltazasync_handler.c"
        "rest_alpaca/rest_alpaca_canslewasync_handler.c"
        "rest_alpaca/rest_alpaca_cansync_handler.c"
        "rest_alpaca/rest_alpaca_cansyncaltaz_handler.c"
        "rest_alpaca/rest_alpaca_canunpark_handler.c"
        "rest_alpaca/rest_alpaca_connected_handler.c"
        "rest_alpaca/rest_alpaca_connected_put_handler.c"
        "rest_alpaca/rest_alpaca_declination_handler.c"
        "rest_alpaca/rest_alpaca_declinationrate_handler.c"
        "rest_alpaca/rest_alpaca_declinationrate_put_handler.c"
        "rest_alpaca/rest_alpaca_description_handler.c"
        "rest_alpaca/rest_alpaca_destinationsideofpier_handler.c"
        "rest_alpaca/rest_alpaca_doesrefraction_handler.c"
        "rest_alpaca/rest_alpaca_driverinfo_handler.c"
        "rest_alpaca/rest_alpaca_driverversion_handler.c"
        "rest_alpaca/rest_alpaca_equatorialsystem_handler.c"
        "rest_alpaca/rest_alpaca_findhome_handler.c"
        "rest_alpaca/rest_alpaca_focallength_handler.c"
        "rest_alpaca/rest_alpaca_guideratedec_handler.c"
        "rest_alpaca/rest_alpaca_guideratedec_put_handler.c"
        "rest_alpaca/rest_alpaca_guideratera_handler.c"
        "rest_alpaca/rest_alpaca_guideratera_put_handler.c"
        "rest_alpaca/rest_alpaca_helpers.c"
        "rest_alpaca/rest_alpaca_interfaceversion_handler.c"
        "rest_alpaca/rest_alpaca_ispulseguiding_handler.c"
        "rest_alpaca/rest_alpaca_management_apiversions_handler.c"
        "rest_alpaca/rest_alpaca_management_configureddevices_handler.c"
        "rest_alpaca/rest_alpaca_management_description_handler.c"
        "rest_alpaca/rest_alpaca_moveaxis_handler.c"
        "rest_alpaca/rest_alpaca_name_handler.c"
        "rest_alpaca/rest_alpaca_park_handler.c"
        "rest_alpaca/rest_alpaca_pulseguide_handler.c"
        "rest_alpaca/rest_alpaca_rightascension_handler.c"
        "rest_alpaca/rest_alpaca_rightascensionrate_handler.c"
        "rest_alpaca/rest_alpaca_rightascensionrate_put_handler.c"
        "rest_alpaca/rest_alpaca_server.c"
        "rest_alpaca/rest_alpaca_setpark_handler.c"
        "rest_alpaca/rest_alpaca_sideofpier_handler.c"
        "rest_alpaca/rest_alpaca_sideofpier_put_handler.c"
        "rest_alpaca/rest_alpaca_siderealtime_handler.c"
        "rest_alpaca/rest_alpaca_siteelevation_handler.c"
        "rest_alpaca/rest_alpaca_siteelevation_put_handler.c"
        "rest_alpaca/rest_alpaca_sitelatitude_handler.c"
        "rest_alpaca/rest_alpaca_sitelatitude_put_handler.c"
        "rest_alpaca/rest_alpaca_sitelongitude_handler.c"
        "rest_alpaca/rest_alpaca_sitelongitude_put_handler.c"
        "rest_alpaca/rest_alpaca_slewing_handler.c"
        "rest_alpaca/rest_alpaca_slewsettletime_handler.c"
        "rest_alpaca/rest_alpaca_slewsettletime_put_handler.c"
        "rest_alpaca/rest_alpaca_slewtoaltazasync_handler.c"
        "rest_alpaca/rest_alpaca_slewtocoordinatesasync_handler.c"
        "rest_alpaca/rest_alpaca_slewtotargetasync_handler.c"
        "rest_alpaca/rest_alpaca_supportedactions_handler.c"
        "rest_alpaca/rest_alpaca_synctoaltaz_handler.c"
        "rest_alpaca/rest_alpaca_synctotarget_handler.c"
        "rest_alpaca/rest_alpaca_targetdec_handler.c"
        "rest_alpaca/rest_alpaca_targetdec_put_handler.c"
        "rest_alpaca/rest_alpaca_targetra_handler.c"
        "rest_alpaca/rest_alpaca_targetra_put_handler.c"
        "rest_alpaca/rest_alpaca_tracking_handler.c"
        "rest_alpaca/rest_alpaca_tracking_put_handler.c"
        "rest_alpaca/rest_alpaca_trackingrate_handler.c"
        "rest_alpaca/rest_alpaca_trackingrate_put_handler.c"
        "rest_alpaca/rest_alpaca_trackingrates_handler.c"
        "rest_alpaca/rest_alpaca_unpark_handler.c"
        "rest_alpaca/rest_alpaca_utcdate_handler.c"
        "rest_alpaca/rest_alpaca_utcdate_put_handler.c"

        "runtime/runtime_config.c"
        "runtime/runtime_loop.c"
        "runtime/runtime_setup.c"

        "tmc/tmc_get_active_microsteps.c"
        "tmc/tmc_init.c"

        "utils/http_utils.c"
        "utils/json_utils.c"
        "utils/number_utils.c"
        "utils/rest_utils.c"
        "utils/string_utils.c"

        "udp_alpaca/udp_alpaca.c"

        INCLUDE_DIRS
        "."
        "alpaca_bridge"
        "led"
        "mount"
        "rest"
        "rest_alpaca"
        "motors"
        "motors_motion"
        "buttons"
        "runtime"
        "utils"
        "udp_alpaca"
        "network"
        "tmc"

        EMBED_TXTFILES
        "../www/dist/index.html"

        REQUIRES
        esp_http_server
        esp_netif
        esp_event
        esp_wifi
        esp_timer
        nvs_flash
        esp_driver_gpio
        esp_driver_uart
)
